--- a/server/etc/post_setup_new_cruise.yaml.dist
+++ b/server/etc/post_setup_new_cruise.yaml.dist
@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------------------------- #
 #
-#         FILE:  postSetupNewCruise.yaml
+#         FILE:  post_setup_new_cruise.yaml
 #
 #  DESCRIPTION:  Configuration file to the postSetupNewCruise hook
 #
@@ -8,12 +8,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.4
+#      VERSION:  2.5
 #      CREATED:  2017-08-05
-#     REVISION:  2020-11-19
+#     REVISION:  2020-12-30
 #
-# LICENSE INFO: Open Vessel Data Management v2.4 (OpenVDMv2)
-#               Copyright (C) OceanDataRat.org 2020
+# LICENSE INFO: Open Vessel Data Management v2.5 (OpenVDMv2)
+#               Copyright (C) OceanDataRat.org 2021
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
