--- a/www/bower.json
+++ b/www/bower.json
@@ -40,12 +40,13 @@
     "esri-leaflet": "~1.0.3",
     "leaflet-fullscreen-bower": "~1.0.1",
     "leaflet.awesome-markers": "~2.0.2",
+    "leaflet-easyprint": "~2.1.8",
     "ionicons": "~2.0.1",
     "js-cookie": "~2.1.0",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "leaflet-timedimension": "~1.0.6",
     "moment": "~2.17.1",
     "leaflet-easyprint": "git://github.com/rowanwins/leaflet-easyPrint.git#gh-pages",
-    "leaflet-color-markers": "^1.0.0"
+    "leaflet-color-markers": "git://github.com/pointhi/leaflet-color-markers"
   }
 }
