--- a/server/bin/build_daily_tracks.py.dist
+++ b/server/bin/build_daily_tracks.py.dist
@@ -1,8 +1,8 @@
 # ----------------------------------------------------------------------------------- #
 #
-#         FILE:  buildDailyTracks.py
+#         FILE:  build_daily_tracks.py
 #
-#        USAGE:  buildDailyTracks.py [-h] [-c cruiseID] collectionSystem
+#        USAGE:  build_daily_tracks.py [-h] [-c cruiseID] collectionSystem
 #
 #  REQUIRED ARGUMENTS:
 #                collectionSystem  name of OpenVDM-defined collection system to process
@@ -29,12 +29,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  1.0
-#      CREATED:  2020-11-01
+#      VERSION:  2.0
+#      CREATED:  2021-01-10
 #     REVISION:  
 #
-# LICENSE INFO: Open Vessel Data Management v2.4 (OpenVDMv2)
-#               Copyright (C) OceanDataRat.org 2020
+# LICENSE INFO: Open Vessel Data Management v2.5 (OpenVDMv2)
+#               Copyright (C) OceanDataRat.org 2021
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -51,58 +51,41 @@
 #
 # ----------------------------------------------------------------------------------- #
 
-from __future__ import print_function
 import os
 import sys
-import pwd
-import grp
-import shutil
-import tempfile
-import argparse
-import json
-import subprocess
 import glob
+import json
+import argparse
+import subprocess
+import logging
 from xml.etree.ElementTree import Element, SubElement, Comment, tostring
-import openvdm
 
-DEBUG = False
+from os.path import dirname, realpath
+sys.path.append(dirname(dirname(dirname(realpath(__file__)))))
+
+from server.utils.set_ownerGroupPermissions import set_ownerGroupPermissions
+from server.utils.output_JSONDataToFile import output_JSONDataToFile
+from server.lib.openvdm import OpenVDM_API
+
+TRACKLINE_EXTRA_DIR_NAME = 'Tracklines'
+DASHBOARD_EXTRA_DIR_NAME = 'Dashboard_Data'
 
 AllGPSSources = [
     {
-        "CollectionSystem":"SCS",
+        "CollectionSystem":"OpenRVDAS",
         "GPSSources": [
             {
-                "device":"POSMV",
-                "regex":"NAV/COM30-POSMV-GGA-RAW_*.json"
-            },
-            {
-                "device":"BridgeData",
-                "regex":"NAV/COM22-BridgeData-GGA-RAW_*.json"
-            },
-            {
                 "device":"CNAV",
-                "regex":"NAV/COM18-CNAV-GGA-RAW_*.json"
+                "regex":"NAV/CNAV-GGA_*.json"
             },
             {
-                "device":"Seapath",
-                "regex":"NAV/COM12-Seapath-GGA-RAW_*.json"
+                "device":"POSMV",
+                "regex":"NAV/POSMV-GGA_*.json"
             }
         ]
     }
-]    
-
-tracklineDirectoryName = 'Tracklines'
-
-
-def debugPrint(*args, **kwargs):
-    global DEBUG
-    if DEBUG:
-        errPrint(*args, **kwargs)
-
-
-def errPrint(*args, **kwargs):
-    print(*args, file=sys.stderr, **kwargs)
-
+]
+ 
 
 # -------------------------------------------------------------------------------------
 # Function to combine all the geoJSON-formatted files listed in the 'files' array
@@ -113,10 +96,10 @@ def errPrint(*args, **kwargs):
 # files to process the fuction returns Null.  Otherwise the fuction returns the
 # combined geoJSON object
 # -------------------------------------------------------------------------------------
-def combineGeoJsonFiles(files, cruiseID, deviceName):
+def convertPluginToGeoJson(filePath, cruiseID, deviceName):
     
     # Blank geoJson object
-    combinedGeoJsonObj = {
+    geoJsonObj = {
         "type":"FeatureCollection",
         "features":[
             {
@@ -133,35 +116,21 @@ def combineGeoJsonFiles(files, cruiseID, deviceName):
         ]
     }
         
-    if len(files) > 0:
-        for file in files:
-            #print file
+    # Open the dashboardData file
+    try:
+        with open(filePath, 'r') as geoJsonFile:
+            geoJsonObj = json.load(geoJsonFile)
 
-            # Open the dashboardData file
-            try:
-                geoJsonFile = open(file, 'r')
-                geoJsonObj = json.load(geoJsonFile)
+            combinedGeoJsonObj['features'][0]['geometry']['coordinates'] += geoJsonObj['visualizerData'][0]['features'][0]['geometry']['coordinates']
+            combinedGeoJsonObj['features'][0]['properties']['coordTimes'] += geoJsonObj['visualizerData'][0]['features'][0]['properties']['coordTimes']
 
-                #print combinedGeoJsonObj[0]['features'][0]['geometry']['coordinates'] 
-                #print geoJsonObj['geodata']['coordinates']
-
-                combinedGeoJsonObj['features'][0]['geometry']['coordinates'] += geoJsonObj['visualizerData'][0]['features'][0]['geometry']['coordinates']
-                combinedGeoJsonObj['features'][0]['properties']['coordTimes'] += geoJsonObj['visualizerData'][0]['features'][0]['properties']['coordTimes']
-
-
-            # If the file cannot be processed return false.
-            except:
-                errPrint("ERROR: Could not proccess file: ", file)
-                return False
-
-            # Close the raw datafile
-            finally:
-                geoJsonFile.close()
-    else:
-        return
+    # If the file cannot be processed return false.
+    except:
+        logging.error("ERROR: Could not proccess file: {}".format(filePath))
+        return False
 
     # If processing is successful, return the (geo)json object 
-    return combinedGeoJsonObj
+    return geoJsonObj
 
 
 # -------------------------------------------------------------------------------------
@@ -177,12 +146,10 @@ def convToKML(geoJSONObj):
     kml.set('xmlns:atom','http://www.w3.org/2005/Atom')
     document = SubElement(kml, 'Document')
     name = SubElement(document, 'name')
-    name.text = geoJSONObj['features'][0]['properties']['name'] + "_trackline.kml"
+    name.text = geoJSONObj['features'][0]['properties']['name'] + "_Trackline.kml"
     placemark = SubElement(document, 'Placemark')
     name2 = SubElement(placemark, 'name')
     name2.text = "path1"
-    #styleurl = SubElement(placemark, 'styleUrl')
-    #styleurl.text = "http://www.schmidtocean.org/files/style.kml#SecondSargassoSea"
     linestring = SubElement(placemark, 'LineString')
     tessellate = SubElement(linestring, 'tessellate')
     tessellate.text = "1"
@@ -190,40 +157,13 @@ def convToKML(geoJSONObj):
 
     coordinatesText = ''
     
-    #print json.dumps(geoJSONObj['features'][0]['geometry']['coordinates'])
-    
     for coordinate in geoJSONObj['features'][0]['geometry']['coordinates']:
-        #print coordinate
         coordinatesText += str(coordinate[0]) + ',' + str(coordinate[1]) + ',0 '
 
     coordinatesText = coordinatesText.rstrip(' ')
-#    coordinatesText = coordinatesText.rstrip(',')
     coordinates.text = coordinatesText
 
     return '<?xml version=\"1.0\" encoding=\"utf-8\"?>' + tostring(kml)
-
-
-# -------------------------------------------------------------------------------------
-# Function to write a string to a file and set the user/group to the specified user.
-# If the specified file cannot be opened then the function returns False.  If
-# successful the function returns True.
-#
-# If the raw datafile cannot be processed the function returns false.
-# -------------------------------------------------------------------------------------
-def writeToFile(contents, filename, user):
-    try:
-        debugPrint('Saving', filename)
-        with open(filename, 'w') as fileObj:
-            fileObj.write(contents)
-
-        os.chmod(filename, 0644)
-        os.chown(filename, pwd.getpwnam(user).pw_uid, grp.getgrnam(user).gr_gid)
-
-    # If the file cannot be processed return false.
-    except:
-        return False
-
-    return True
 
 # -------------------------------------------------------------------------------------
 # The main function of the script
@@ -364,4 +304,142 @@ def main(argv):
             break
 
 if __name__ == "__main__":
-    main(sys.argv[1:])
+    parser = argparse.ArgumentParser(description='build cruise tracklines post-dashboard processing')
+    parser.add_argument('-v', '--verbosity', dest='verbosity',
+                        default=0, action='count',
+                        help='Increase output verbosity')
+    parser.add_argument('-c', dest='cruiseID', metavar='cruiseID', help='the cruiseID to process')
+    parser.add_argument('-o', dest='outputDir', metavar='OutputDir', help='the desired output directory')
+    parser.add_argument('collectionSystem', help='the collection system to search for geoJSON files')
+
+    parsed_args = parser.parse_args()
+
+    ############################
+    # Set up logging before we do any other argument parsing (so that we
+    # can log problems with argument parsing).
+    
+    LOGGING_FORMAT = '%(asctime)-15s %(levelname)s - %(message)s'
+    logging.basicConfig(format=LOGGING_FORMAT)
+
+    LOG_LEVELS = {0: logging.WARNING, 1: logging.INFO, 2: logging.DEBUG}
+    parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
+    logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
+      
+    # build an OpenVDM object
+    openVDM = OpenVDM_API()
+    
+    # Retrieve the shipboard data warehouse configuration
+    shipboardDataWarehouseConfig = openVDM.getShipboardDataWarehouseConfig()
+    baseDir = shipboardDataWarehouseConfig['shipboardDataWarehouseBaseDir']
+
+    # Define the cruiseID to use for identifying the position data
+    cruiseID = openVDM.getCruiseID()
+
+    # if a cruiseID was declared in the command-line aruments, redefine the cruiseID variable
+    if not parsed_args.cruiseID is None:
+        logging.info("Setting CruiseID to: {}".format(parsed_args.cruiseID))
+        cruiseID = parsed_args.cruiseID
+
+    cruiseDir = os.path.join(baseDir, cruiseID)
+    # Verify the cruise data directory exists
+    if not os.path.isdir(cruiseDir):
+        logging.error("Cruise data directory: {} not found!".format(cruiseDir))
+        return -1
+
+    outputDir = None
+    if parsed_args.outputDir:
+        outputDir = parsed_args.outputDir
+    else:
+        try:
+            outputDir = os.path.join(cruiseDir, openVDM.getExtraDirectoryByName(TRACKLINE_EXTRA_DIR_NAME)['destDir'])
+        except:
+            logging.error("\"{}\" Directory not defined within OpenVDM".format(TRACKLINE_EXTRA_DIR_NAME))
+            return -1
+
+    # Verify the output directory exists
+    if not os.path.isdir(outputDir):
+        logging.error("Output Directory: {} not found".format(outputDir))
+        return -1
+
+    # Retrieve the information for the collection system defined in the command-line argument
+    collectionSystem = openVDM.getCollectionSystemTransferByName(parsed_args.collectionSystem)
+    if not collectionSystem:
+        logging.error("Collection System: {} not found.".format(parsed_args.collectionSystem))
+        return -1
+    
+    try:
+        dashboardDataDir = os.path.join(cruiseDir, openVDM.getExtraDirectoryByName(DASHBOARD_EXTRA_DIR_NAME)['dest'])
+
+        # Verify the trackline directory exists
+        if not os.path.isdir(dashboardDataDir):
+            logging.error("Dashboard Data Directory: {} not found".format(dashboardDataDir))
+            return -1
+    except:
+        logging.error("\"{}\" Directory not defined within OpenVDM".format(DASHBOARD_EXTRA_DIR_NAME))
+        return -1
+
+
+    collectionSystemDashboardDataDir = os.path.join(dashboardDataDir, collectionSystem['destDir'])
+
+    # Verify the dashboard data directory for the specified collecion system exists
+    if not os.path.isdir(collectionSystemDashboardDataDir):
+        logging.error('Dashboard Data Directory for {}: {} not found'.format(collectionSystem['name'], collectionSystemDashboardDataDir))
+        return -1
+
+    # retrieve the user to use when setting file ownership
+    warehouseUser = shipboardDataWarehouseConfig['shipboardDataWarehouseUsername']
+
+    # Loop through the AllGPSSources object
+    for GPSSources in AllGPSSources:
+        
+        # If the collection system name matches the one in the command-line argrument
+        if GPSSources['CollectionSystem'] == parsed_args.collectionSystem:
+    
+            #Build a geoJSON and kml cruisetrack for each GGA Device
+            for GPSSource in GPSSources['GPSSources']:
+                logging.info("Processing {}".format(GPSSource['device']))
+                
+                # Build the list of files coorsponding to the current device based on the regex provided
+                files = glob.glob(collectionSystemDashboardDataDir.rstrip('/') + '/' + GPSSource['regex'])
+                files.sort()
+
+                logging.debug("Files: {}".format(json.dumps(files, indent=2)))
+                
+                for file in files:
+                    # Combind the geoJSON objects
+                    geoJsonObj = convertPluginToGeoJson(file, cruiseID, GPSSource['device'])
+                    
+                    # If there was a problem, exit
+                    if not geoJsonObj:
+                        logging.error("Problem converting data file: {}".format(file))
+                        continue
+                    elif geoJsonObj is None:
+                        logging.error("No data returned after converting data file: {}".format(file))
+                        continue
+
+                    # Save the converted geoJSON object to file 
+                    output_filepath = os.path.join(tracklineDir, cruiseID + "_" + os.path.basename(file).split('.')[0] + "_Trackline.json")
+                    logging.info("Saving file: {}".format(output_filepath))
+                    output_results = output_JSONDataToFile(output_filepath, geoJsonObj)
+
+                    if not output_results['verdict']:
+                        logging.error("Problem writing output file: {}, reason: {}".format(output_filepath, output_results['reason']))
+                    else:
+                        output_results = set_ownerGroupPermissions(warehouseUser, output_filepath)
+                        if not output_results['verdict']:
+                            logging.error("Problem setting permissions for output file: {}, reason: {}".format(output_filepath, output_results['reason']))
+                
+                    # Convert the combined geoJSON object to kml and save to file 
+                    output_filepath_kml = os.path.join(tracklineDir, cruiseID + "_" + os.path.basename(file).split('.')[0] + "_Trackline.kml")
+                    logging.info("Saving file: {}".format(output_filepath_kml))
+                    output_results = output_JSONDataToFile(output_filepath_kml, convToKML(geoJsonObj))
+
+                    if not output_results['verdict']:
+                        logging.error("Problem writing output file: {}, reason: {}".format(output_filepath_kml, output_results['reason']))
+                    else:
+                        output_results = set_ownerGroupPermissions(warehouseUser, output_filepath_kml)
+                        if not output_results['verdict']:
+                            logging.error("Problem setting permissions for output file: {}, reason: {}".format(output_filepath_kml, output_results['reason']))
+            
+            # No need to proceed to another collectionSystem
+            break
